--- a/src/app/topo/topo.component.html
+++ b/src/app/topo/topo.component.html
@@ -13,6 +13,9 @@
                  placeholder="Pesquise por ofertas..."
                  #termoDaPesquisa
                  (keyup)="pesquisa(termoDaPesquisa.value)" />
+          <ul class="list-group" style="position:absolute;">
+            <li class="list-group-item" *ngFor="let oferta of ofertas2">{{oferta.titulo}}</li>
+          </ul>
         </div>
         <div class="col-md-2">
           <a a href="#">
